Fri Oct 17 18:37:08 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_stubs.adb: Change s-garela.adb generation. Move s-garela
	generation code into a procedure Initialize.

Thu Oct 16 16:38:04 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Update caused by System.Garlic.Options changes.

Wed Sep 17 18:15:37 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_lead.adb: Pipe standard error and output to /dev/null for
	a pragma Starter (Shell) because some systems output the pid of
	the background process.

	* xe_stubs.adb: Fix Mark_Unit_On_Partition when unit is generic.
	
Sat Sep 13 14:32:15 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: Use output of gnatls to find the right include
	and object directories. Also output the path to libgnat.a when
	used with the 'pathtolib' argument. Make it work with a
	non-standard or cross installation.

Fri Sep 12 18:52:20 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb, xe_scan.adb, xe_lead.adb, xe_build.adb,
	xe_back.adb, xe_stubs.adb, xe_check.adb: Fix output message.

Wed Sep  3 20:19:31 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_utils.ads, xe_utils.adb: Add Message procedure and remove
 	Write_Message (more general). Add Strip_Unit_Suffix to remove
	%[bs] suffixes in a unit name.

	* xe_back.ads, xe_back.adb: Change More_Recent_Stamp into
 	Most_Recent_Stamp. Add a boolean parameter to Set_Light_PCS. Use
 	new Message procedure to reduce code.

	* xe_build.adb, xe_lead.adb, xe_scan.adb, xe_check.adb: Use new
 	Message procedure.

	* xe_stubs.adb, xe_stubs.adb: Use new Message
 	procedure. Optimization of recompilation due to stamp
 	inconsistency. Add procedure Mark_Units_On_Partition.

Fri Aug 29 21:45:27 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb, xe_back.adb, xe_back.ads, xe_check.adb,
	xe_stubs.ads: Move the code such a way that gnatdist output
	indicates that a light PCS is used.
